<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Resources</string>
    <string name="language">English</string>
    <string name="density" tools:ignore="MissingTranslation">DPI</string>
    <string name="orientation">Portland</string>
    <string name="night_mode">Not night</string>
    <string name="screen_format">Not long</string>
    <string name="version" tools:ignore="MissingTranslation">Any</string>
    <string name="descriptionLanguage">Language</string>
    <string name="descriptionDensity">Density</string>
    <string name="descriptionOrientation">Orientation</string>
    <string name="descriptionNight_mode">Night mode</string>
    <string name="descriptionScreen_format">Screen format</string>
    <string name="descriptionVersion">Version</string>
    <string name="loginName" translatable="false">login</string>
    <string name="password" translatable="false">password</string>
    <string name="my_cool_style" translatable="false">My cool style</string>
    <string name="material_light" translatable="false">Material light</string>
    <string name="material_light_action_bar_dark" translatable="false">Material light action bar dark</string>
    <string name="material_dark" translatable="false">Material dark</string>
    <string name="not_name" translatable="false">Login not valid</string>
    <string name="weak_password" translatable="false">passNotValidate</string>

</resources>